<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">计算器</string>
    <string name="action_settings">Settings</string>
    <string name="please">请输入......</string>
     <string name="m1">AC</string>
      <string name="m2">±</string>
       <string name="m3">%</string>
        <string name="m4">÷</string>
         <string name="m5">7</string>
          <string name="m6">8</string>
           <string name="m7">9</string>
           
            <string name="m8">×</string>
             <string name="m9">4</string>
              <string name="m10">5</string>
               <string name="m11">6</string>
                <string name="m12">-</string>
                 <string name="m13">1</string>
                  <string name="m14">2</string>
                   <string name="m15">3</string>
                    <string name="m16">+</string>
                     <string name="m17">0</string>
                      <string name="m18">.</string>
                       <string name="m19">=</string>
</resources>