<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/a"
    android:orientation="vertical"

    tools:context=".MainActivity" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please"
        android:text="@string/please" 
        android:textColor="#ff0066"
        android:minLines="2"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                 android:id="@+id/four"
                style="@style/btn1"
                android:text="@string/m1"/>
            <Button
                 android:id="@+id/five"
                style="@style/btn1"
                android:text="@string/m2"/>
            <Button
                 android:id="@+id/six"
                style="@style/btn1"
                android:text="@string/m3"/>
            <Button
                 android:id="@+id/seven"
                style="@style/btn1"
                android:text="@string/m4"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                 android:id="@+id/eight"
                style="@style/btn1"
                android:text="@string/m5"/>
            <Button
                 android:id="@+id/nine"
                style="@style/btn1"
                android:text="@string/m6"/>
            <Button
                 android:id="@+id/ten"
                style="@style/btn1"
                android:text="@string/m7"/>
            <Button
                 android:id="@+id/eleven"
                style="@style/btn1"
                android:text="@string/m8"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                 android:id="@+id/twelve"
                style="@style/btn1"
                android:text="@string/m9"/>
            <Button
                 android:id="@+id/thirteen"
                style="@style/btn1"
                android:text="@string/m10"/>
            <Button
                 android:id="@+id/fourteen"
                style="@style/btn1"
                android:text="@string/m11"/>
            <Button
                 android:id="@+id/fifteen"
                style="@style/btn1"
                android:text="@string/m12"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                 android:id="@+id/sixteen"
                style="@style/btn1"
                android:text="@string/m13"/>
            <Button
                 android:id="@+id/seventeen"
                style="@style/btn1"
                android:text="@string/m14"/>
            <Button
                 android:id="@+id/eighteen"
                style="@style/btn1"
                android:text="@string/m15"/>
            <Button
                 android:id="@+id/nineteen"
                style="@style/btn1"
                android:text="@string/m16"/>
        </TableRow>
       
        </TableLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
       
            <Button
                android:id="@+id/one"
                style="@style/btn2"
                
                android:text="@string/m17"/>
            
            <Button
                android:id="@+id/two"
                style="@style/btn1"
                 android:layout_toRightOf="@+id/one"
                android:layout_alignTop="@+id/one"
                
                android:text="@string/m18"/>
            <Button
                android:id="@+id/three"
                style="@style/btn1"
                android:layout_toRightOf="@+id/two"
                android:layout_alignTop="@+id/two"
                
                android:text="@string/m19"/>
           
        </RelativeLayout>
        

</LinearLayout>